Next release

  Bug Fixes

  - Change default paster template generator to use ``Paste#http``
    server rather than ``PasteScript#cherrpy`` server.  The cherrypy
    server has a security risk in it when ``REMOTE_USER`` is trusted
    by the downstream application.

0.4.1 (10/28/2008)

  Bug Fixes

   - If the ``render_view_to_response`` function was called, if the
     view was found and called, but it returned something that did not
     implement IResponse, the error would pass by unflagged.  This was
     noticed when I created a view function that essentially returned
     None, but received a NotFound error rather than a ValueError when
     the view was rendered.  This was fixed.

0.4.0 (10/03/2008)

  Docs 

   - An "Environment and Configuration" chapter was added to the narrative 
     portion of the documentation.

  Features

   - Ensure bfg doesn't generate warnings when running under Python
     2.6.

   - The environment variable ``BFG_RELOAD_TEMPLATES`` is now available
     (serves the same purpose as ``reload_templates`` in the config file).

   - A new configuration file option ``debug_authorization`` was added.
     This turns on printing of security authorization debug statements
     to ``sys.stderr``.  The ``BFG_DEBUG_AUTHORIZATION`` environment
     variable was also added; this performs the same duty.

  Bug Fixes

   - The environment variable ``BFG_SECURITY_DEBUG`` did not always work.
     It has been renamed to ``BFG_DEBUG_AUTHORIZATION`` and fixed.

  Deprecations

   - A deprecation warning is now issued when old API names from the
     ``repoze.bfg.templates`` module are imported.

  Backwards incompatibilities

   - The ``BFG_SECURITY_DEBUG`` environment variable was renamed to
     ``BFG_DEBUG_AUTHORIZATION``.

0.3.9 (08/27/2008)

  Features

   - A ``repoze.bfg.location`` API module was added.

  Backwards incompatibilities

   - Applications must now use the ``repoze.bfg.interfaces.ILocation``